# jiraiya

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml  run.sh
code_analyzer/: main.py  settings.py
code_analyzer/domain/: documentation.py  enums.py
code_analyzer/io/: code_loader.py  loader.py  markdown.py
code_analyzer/prompts/: human_prompts.py  system_prompt.py
code_analyzer/writer/: generator.py
doc_scribe/: agent_config.yaml  app.py  code_rag.py  config.yaml  generate_docs.py  index_codebase.py  index_dataset.py  main.py  settings.py
doc_scribe/agent/: components.py  tools.py
doc_scribe/code/: indexer.py  vectore_store.py
doc_scribe/codebase/: code_embedder.py  code_parser.py  code_store.py
doc_scribe/domain/: code_data.py  config.py  data.py  enums.py  eval.py  jira.py
doc_scribe/encoder/: base.py  bedrock.py  cohere.py  titan.py
doc_scribe/evaluator/: ir_evaluator.py
doc_scribe/io/: code_loader.py  code_parser.py  jira_ticket_manager.py  markdown.py  reference_detector.py
doc_scribe/prompts/: system_prompt.py
doc_scribe/store/: code_indexer.py  code_store.py  hybrid_search_store.py  vectore_store.py
doc_scribe/writer/: generator.py
jiraiya/: app.py  config.yaml  index_codebase.py
jiraiya/agent/: components.py  tools.py
jiraiya/domain/: data.py  documentation.py  enums.py
jiraiya/indexing/: code_parser.py  kotlin_reference_detector.py  python_reference_detector.py  reference_detector_base.py
jiraiya/io/: code_parser.py  jira_ticket_manager.py  reference_detector.py
jiraiya/jira_/: jira_issue_manager.py
jiraiya/store/: code_store.py  utils.py
tests/io/: test_code_loader.py  test_reference_detector.py  test_reference_detector_kotlin.py  test_reference_detector_python.py
tests/writer/: test_generator.py
